feat(US.0.2): ghipy dao and service for orchestrate integration was created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
         "strictFunctionTypes": true,
         "paths": {
             "@dao": ["dao"],
-            "@service": ["service"],
+            "@services": ["services"],
             "@dao/*": ["dao/*"],
             "@routers": ["routers"],
             "@setup": ["setup/index"],
