--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "pre-commit": "yarn lint"
     },
     "dependencies": {
+        "axios": "^0.21.4",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^9.0.2",
@@ -63,7 +64,7 @@
     },
     "_moduleAliases": {
         "@dao": "dist/dao",
-        "@service": "dist/service",
+        "@services": "dist/services",
         "@routers": "dist/routers",
         "@setup": "dist/setup"
     },
