--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "scripts": {
         "build": "rimraf dist && tsc -p tsconfig.build.json",
         "lint": "eslint . --ext .ts --fix",
+        "test": "jest --color --verbose --no-cache",
         "format": "prettier --write \"./src/**/*.ts\"",
         "format-check": "prettier --list-different \"./src/**/*.ts\"",
         "dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node --require dotenv/config dist/Server.js\"",
         "start": "node --require dotenv/config dist/Server.js",
         "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/Server.js\"",
         "app-deploy": "gcloud app deploy",
-        "pre-commit": "yarn lint"
+        "pre-commit": "yarn lint && yarn test"
     },
     "dependencies": {
         "axios": "^0.21.4",
@@ -45,6 +46,7 @@
         "@types/errorhandler": "^1.5.0",
         "@types/express": "^4.17.11",
         "@types/helmet": "^4.0.0",
+        "@types/jest": "^27.0.1",
         "@types/method-override": "^0.0.31",
         "@types/morgan": "^1.9.2",
         "@types/node": "^15.3.0",
@@ -56,8 +58,10 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
         "husky": "^4.2.5",
+        "jest": "^27.2.0",
         "prettier": "^2.3.0",
         "rimraf": "^3.0.2",
+        "ts-jest": "^27.0.5",
         "ts-node": "^9.1.1",
         "tsc-watch": "^4.2.9",
         "typescript": "^4.2.4"
