--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "lib": ["es5", "es6", "es7", "es2015", "es2016", "es2017", "es2018", "esnext"],
-        "types": ["reflect-metadata", "node"],
+        "types": ["reflect-metadata", "node", "jest"],
         "module": "CommonJS",
         "moduleResolution": "Node",
         "removeComments": true,
