--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,10 @@
 steps:
 - name: node
-  entrypoint: npm
-  args: ['run', 'build']
+  entrypoint: yarn
+  args: ['install']
+- name: node
+  entrypoint: yarn
+  args: ['build']
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
 timeout: "1600s"
