--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
 - name: node
-  entrypoint: yarn
+  entrypoint: npm
   args: ['install']
 - name: node
-  entrypoint: yarn
-  args: ['build']
+  entrypoint: npm
+  args: ['run', 'build']
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
 timeout: "1600s"
