--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "api-third-party-integration",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "main": "dist/Server.js",
     "description": "Api for third party integrations",
     "license": "UNLICENSED",
@@ -20,6 +20,7 @@
         "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/Server.js\"",
         "app-deploy": "gcloud app deploy",
         "semantic-release": "semantic-release --branches main",
+        "release": "standard-version",
         "pre-commit": "yarn lint && yarn test"
     },
     "dependencies": {
@@ -62,7 +63,7 @@
         "jest": "^27.2.0",
         "prettier": "^2.3.0",
         "rimraf": "^3.0.2",
-        "semantic-release": "^18.0.0",
+        "standard-version": "^9.3.1",
         "ts-jest": "^27.0.5",
         "ts-node": "^9.1.1",
         "tsc-watch": "^4.2.9",
